# Desktop-pet

./: .gitignore  Cargo.toml  README.md  requirements.txt  start-pet-dev.bat  start-pet-dev.md  start-pet-dev.ps1  start.bat  start.ps1  start_all.bat  stop_all.bat  桌宠需求书.md  项目需求书.docx
.cargo/: config.toml
backend/: Cargo.toml
backend/memory/: memory.json
backend/src/: diary.rs  lib.rs  main.rs  memory.rs  monitor.rs  state.rs
database-layer/: Cargo.toml
database-layer/src/: lib.rs
frontend/: Cargo.toml
frontend/assets/debug_pet/: character.json
frontend/assets/夕/: character.json
frontend/src/: main.rs  pet_level_sync.rs  pet_stats.rs  phrases.rs  realworld.rs  ws_auto_talk.rs
frontend/src/ai_client/: mod.rs
frontend/src/ai_persona/: mod.rs
frontend/src/analytics/: mod.rs
frontend/src/animation/: animation.rs  animation_player.rs  frame.rs  loader.rs  mod.rs
frontend/src/animation_editor/: mod.rs
frontend/src/app/: mod.rs
frontend/src/assets/: mod.rs
frontend/src/auto_update/: mod.rs
frontend/src/character/: mod.rs
frontend/src/character_store/: mod.rs
frontend/src/config/: mod.rs
frontend/src/desktop_interaction/: mod.rs
frontend/src/emotion/: mod.rs
frontend/src/event_bus/: mod.rs
frontend/src/extension/: mod.rs
frontend/src/input/: mod.rs
frontend/src/interaction/: mod.rs
frontend/src/ipc/: client.rs  http.rs  mod.rs  named_pipe.rs  protocol.rs  tcp.rs
frontend/src/mod_loader/: mod.rs
frontend/src/multi_character/: mod.rs
frontend/src/pet/: mod.rs
frontend/src/physics/: mod.rs
frontend/src/plugin/: mod.rs
frontend/src/render/: mod.rs
frontend/src/renderer/: mod.rs
frontend/src/scene/: mod.rs
frontend/src/scripting/: mod.rs
frontend/src/state_machine/: mod.rs
frontend/src/task_system/: mod.rs
frontend/src/voice/: mod.rs
services/analytics-service/: Cargo.toml
services/analytics-service/src/: lib.rs
services/chat-service/: Cargo.toml
services/chat-service/src/: lib.rs
services/memory-service/: Cargo.toml
services/memory-service/src/: lib.rs
services/user-service/: Cargo.toml
services/user-service/src/: lib.rs
services/voice-service/: Cargo.toml
services/voice-service/src/: lib.rs
