[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
database-layer = { path = "../database-layer" }
chat-service = { path = "../services/chat-service" }
memory-service = { path = "../services/memory-service" }
user-service = { path = "../services/user-service" }
analytics-service = { path = "../services/analytics-service" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3"

# 系统监控
sysinfo = "0.32"

# Windows API (获取焦点窗口)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
