[package]
name = "database-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "json"] }
redis = { version = "0.25", optional = true, default-features = false, features = ["tokio-comp"] }
qdrant-client = { version = "1", optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
redis_cache = ["dep:redis"]
vector_db = ["dep:qdrant-client"]
all = ["postgres", "redis_cache", "vector_db"]
