[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 窗口和绘制
winit = "0.30"
pixels = "0.15"
softbuffer = "0.3"
minifb = "0.26"

# 图像处理
image = "0.25"
rand = "0.8"

# JSON 与序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 与异步
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tungstenite = "0.26"
bincode = "1.3"

# 系统垃圾回收
trash = "3"

[target.'cfg(windows)'.dependencies]
webview2 = "0.1"
webview2-sys = "0.1"
winapi = { version = "0.3", features = ["windef", "winuser", "wingdi"] }
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
]}
