[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
database-layer = { path = "../../database-layer" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
